--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "rootDir": ".",
         "target": "es2020",
         "forceConsistentCasingInFileNames": true,
-        "strict": true,
+        "strict": false,
         "noImplicitOverride": true,
         "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
