--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -8,8 +8,16 @@
         "allowSyntheticDefaultImports": true,
         "moduleResolution": "node",
         "jsx": "react-jsx",
-        "types": ["reflect-metadata"]
+        "types": []
     },
-    "exclude": ["src/test-setup.ts", "src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts", "node_modules/**/*"],
-    "include": ["src/**/*.ts"]
+    "exclude": [
+        "src/test-setup.ts",
+        "src/**/*.spec.ts",
+        "jest.config.ts",
+        "src/**/*.test.ts",
+        "node_modules/**/*"
+    ],
+    "include": [
+        "src/**/*.ts"
+    ]
 }
