--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "vitest": "^1.1.0"
     },
     "dependencies": {
-        "@universal-di/core": "^1.0.3",
-        "react": "^18.2.0"
+        "@universal-di/core": "^1.0.3"
+    },
+    "peerDependencies": {
+        "react": "^18.0.0 || ^19.0.0"
     },
     "bugs": {
         "url": "https://github.com/universal-di/react/issues"
