--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "devDependencies": {
         "@swc/core": "^1.3.101",
         "@testing-library/jest-dom": "^6.1.5",
-        "@testing-library/react": "^14.1.2",
-        "@types/node": "^8.0.31",
-        "jsdom": "^23.0.1",
-        "react-dom": "^18.2.0",
-        "rimraf": "^5.0.5",
+        "@testing-library/react": "^16.3.0",
+        "@types/node": "^22.15.21",
+        "@types/react": "^19.1.5",
+        "jsdom": "^26.1.0",
+        "react-dom": "^19.1.0",
+        "rimraf": "^6.0.1",
         "rollup-plugin-swc": "^0.2.1",
         "typescript": "5.3.3",
-        "vitest": "^1.1.0"
+        "vitest": "^3.1.4"
     },
     "dependencies": {
         "@universal-di/core": "^1.0.3",
-        "react": "^19.0.0"
+        "react": "^19.1.0"
     },
     "bugs": {
         "url": "https://github.com/universal-di/react/issues"
